apps/frontend/src/features/shared/ui/multiselect/multiselect.scss
@import 'bootstrap/scss/functions';
@import 'bootstrap/scss/variables';
@import 'bootstrap/scss/mixins';
@import '@/css/app-vars.scss';

fieldset[disabled] .multiselect {
  pointer-events: none;
}

.multiselect__spinner {
  position: absolute;
  right: 1px;
  top: 1px;
  width: 40px;
  height: 38px;
  display: block;
}

.multiselect__spinner::before,
.multiselect__spinner::after {
  position: absolute;
  content: '';
  top: 50%;
  left: 50%;
  margin: -8px 0 0 -8px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  border-color: var(--bs-primary) transparent transparent;
  border-style: solid;
  border-width: 2px;
  box-shadow: 0 0 0 1px transparent;
}

.multiselect__spinner::before {
  animation: spinning 2.4s cubic-bezier(0.41, 0.26, 0.2, 0.62);
  animation-iteration-count: infinite;
}

.multiselect__spinner::after {
  animation: spinning 2.4s cubic-bezier(0.51, 0.09, 0.21, 0.8);
  animation-iteration-count: infinite;
}

.multiselect__loading-enter-active,
.multiselect__loading-leave-active {
  transition: opacity 0.4s ease-in-out;
  opacity: 1;
}

.multiselect__loading-enter,
.multiselect__loading-leave-active {
  opacity: 0;
}

.multiselect,
.multiselect__input,
.multiselect__single {
  font-family: inherit;
  font-size: 1rem;
  touch-action: manipulation;
}

.multiselect {
  --multiselect-dropdown-height: 240px;
  box-sizing: content-box;
  display: block;
  position: relative;
  width: 100%;
  min-height: 40px;
  text-align: left;
  color: var(--bs-body-color);
  background-color: var(--bs-body-bg);
  border-radius: 5px;
}

.multiselect {
  transition: box-shadow 0.15s ease;

  &--active {
    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.35);

    .multiselect__content-wrapper {
      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.35);
    }
  }
}

.modal-content .multiselect {
  position: relative;
  margin-bottom: var(--multiselect-dropdown-height);
}

.multiselect * {
  box-sizing: border-box;
}

.multiselect:focus {
  outline: none;
}

.multiselect--disabled {
  background: var(--bs-light);
  pointer-events: none;
  opacity: 0.6;
}

.multiselect--active {
  z-index: 50;
}

.multiselect--active:not(.multiselect--above) .multiselect__current,
.multiselect--active:not(.multiselect--above) .multiselect__input,
.multiselect--active:not(.multiselect--above) .multiselect__tags {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.multiselect--active .multiselect__select {
  transform: rotateZ(180deg);
}

.multiselect--above.multiselect--active .multiselect__current,
.multiselect--above.multiselect--active .multiselect__input,
.multiselect--above.multiselect--active .multiselect__tags {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.multiselect__input,
.multiselect__single {
  position: relative;
  display: inline-block;
  height: 20px;
  line-height: 20px;
  border: none;
  border-radius: 5px;
  padding: 0 0 0 5px;
  width: calc(100%);
  transition: border 0.1s ease;
  box-sizing: border-box;
  vertical-align: top;
}

.multiselect__tag~.multiselect__input,
.multiselect__tag~.multiselect__single {
  width: auto;
}

.multiselect__input:hover,
.multiselect__single:hover {
  border-color: var(--bs-border-color);
}

.multiselect__input:focus,
.multiselect__single:focus {
  border-color: var(--bs-primary);
  background-color: inherit;
  outline: none;
}

.multiselect__single {
  padding-left: 5px;
}

.multiselect__tags-wrap {
  display: inline-flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 2px;
}

.multiselect__tags {
  min-height: 40px;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  padding: 6px 40px 6px 10px;
  border-radius: 5px;
  border: 1px solid var(--bs-border-color);
  background: $input-bg !important;
}

.multiselect__tag {
  position: relative;
  display: inline-block;
  font-size: 0.8rem;
  padding: 4px 26px 4px 10px;
  border-radius: 5px;
  margin-right: 10px;
  line-height: 1;
  white-space: nowrap;
  overflow: hidden;
  max-width: 100%;
  text-overflow: ellipsis;
}

.multiselect__tag-icon {
  cursor: pointer;
  margin-left: 7px;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  font-weight: 700;
  font-style: initial;
  width: 22px;
  text-align: center;
  line-height: 22px;
  transition: all 0.2s ease;
  border-radius: 5px;
}

.multiselect__tag-icon::after {
  content: '×';
  color: var(--bs-secondary-color);
  font-size: 14px;
}

.multiselect__current {
  line-height: 16px;
  min-height: 40px;
  box-sizing: border-box;
  display: block;
  overflow: hidden;
  padding: 8px 12px 0;
  padding-right: 30px;
  white-space: nowrap;
  margin: 0;
  text-decoration: none;
  border-radius: 5px;
  cursor: pointer;
}

.multiselect__select {
  line-height: 16px;
  display: block;
  position: absolute;
  box-sizing: border-box;
  width: 40px;
  height: 38px;
  right: 1px;
  top: 1px;
  padding: 4px 8px;
  margin: 0;
  text-decoration: none;
  text-align: center;
  cursor: pointer;
  transition: transform 0.2s ease;
}

.multiselect__select::before {
  position: relative;
  right: 0;
  top: 65%;
  color: var(--bs-border-color);
  margin-top: 4px;
  border-style: solid;
  border-width: 5px 5px 0 5px;
  border-color: var(--bs-border-color) transparent transparent transparent;
  content: '';
}

.multiselect__placeholder {
  color: var(--bs-secondary-color);
  display: inline-block;
  line-height: 20px;
}

.multiselect--active .multiselect__placeholder {
  display: none;
}

.multiselect__content-wrapper {
  position: absolute;
  display: block;
  background: var(--bs-body-bg);
  width: 100%;
  max-height: var(--multiselect-dropdown-height);
  overflow-x: hidden;
  overflow-y: auto;
  border: 1px solid var(--bs-border-color);
  border-top: none;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  z-index: 50;
  -webkit-overflow-scrolling: touch;
}

.multiselect__content {
  list-style: none;
  display: inline-block;
  padding: 0;
  margin: 0;
  min-width: 100%;
  vertical-align: top;
}

.multiselect--above .multiselect__content-wrapper {
  bottom: 100%;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  border-bottom: none;
  border-top: 1px solid var(--bs-border-color);
}

.multiselect__content::-webkit-scrollbar {
  display: none;
}

.multiselect__element {
  display: block;
}

.multiselect__option {
  display: block;
  padding: 12px;
  min-height: 40px;
  line-height: 16px;
  text-decoration: none;
  text-transform: none;
  position: relative;
  cursor: pointer;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.multiselect__option::after {
  top: 0;
  right: 0;
  position: absolute;
  line-height: 40px;
  padding-right: 12px;
  padding-left: 20px;
  font-size: 13px;
}

.multiselect__option--highlight {
  background: var(--bs-primary);
  outline: none;
  color: var(--bs-white);
}

.multiselect__option--highlight::after {
  content: attr(data-select);
  background: var(--bs-primary);
  color: var(--bs-white);
}

.multiselect__option--selected {
  font-weight: bold;
}

.multiselect__option--selected::after {
  content: attr(data-selected);
  background: inherit;
}

.multiselect__option--selected.multiselect__option--highlight {
  color: var(--bs-white);
}

.multiselect__option--selected.multiselect__option--highlight::after {
  content: attr(data-deselect);
  color: var(--bs-white);
}

.multiselect--disabled .multiselect__current,
.multiselect--disabled .multiselect__select {
  background: $input-bg;
  color: var(--bs-secondary-color);
}

.multiselect__option--disabled {
  background: var(--bs-light) !important;
  color: var(--bs-secondary-color) !important;
  cursor: text;
  pointer-events: none;
}

.multiselect__option--group {
  background: $input-bg;
  color: var(--bs-body-color);
}

.multiselect__option--group.multiselect__option--highlight {
  background: var(--bs-body-color);
  color: var(--bs-white);
}

.multiselect__option--group.multiselect__option--highlight::after {
  background: var(--bs-body-color);
}

.multiselect__option--disabled.multiselect__option--highlight {
  background: var(--bs-light);
}

.multiselect__option--group-selected.multiselect__option--highlight {
  background: var(--bs-danger);
  color: var(--bs-white);
}

.multiselect__option--group-selected.multiselect__option--highlight::after {
  background: var(--bs-danger);
  content: attr(data-deselect);
  color: var(--bs-white);
}

.multiselect-enter-active,
.multiselect-leave-active {
  transition: all 0.15s ease;
}

.multiselect-enter,
.multiselect-leave-active {
  opacity: 0;
}

.multiselect__strong {
  margin-bottom: 8px;
  line-height: 20px;
  display: inline-block;
  vertical-align: top;
}

*[dir='rtl'] .multiselect {
  text-align: right;
}

*[dir='rtl'] .multiselect__select {
  right: auto;
  left: 1px;
}

*[dir='rtl'] .multiselect__tags {
  padding: 8px 8px 0 40px;
}

*[dir='rtl'] .multiselect__content {
  text-align: right;
}

*[dir='rtl'] .multiselect__option::after {
  right: auto;
  left: 0;
}

*[dir='rtl'] .multiselect__clear {
  right: auto;
  left: 12px;
}

*[dir='rtl'] .multiselect__spinner {
  right: auto;
  left: 1px;
}

@keyframes spinning {
  from {
    transform: rotate(0);
  }

  to {
    transform: rotate(2turn);
  }
}

